--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "native-base": "^2.2.1",
     "react": "^16.0.0-alpha.12",
     "react-apollo": "^1.4.8",
-    "react-native": "^0.46.1"
+    "react-native": "^0.46.1",
+    "react-navigation": "^1.0.0-beta.11"
   }
 }
